tests/bad/03-missing-default.stderr
error[E0599]: no function or associated item named `default` found for struct `Foo` in the current scope
 --> tests/bad/03-missing-default.rs:6:32
  |
4 | struct Foo(u8);
  | ---------- function or associated item `default` not found for this struct
5 |
6 | #[derive(Debug, PartialEq, Eq, Default)]
  |                                ^^^^^^^ function or associated item not found in `Foo`
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `default`, perhaps you need to implement it:
          candidate #1: `Default`
  = note: this error originates in the derive macro `Default` (in Nightly builds, run with -Z macro-backtrace for more info)
